shifts navi bar

--- a/bestthirts.html
+++ b/bestthirts.html
@@ -5,12 +5,19 @@
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-	<ul class="nav">
-		<li>Home</li>
-		<li>Our Vision</li>
-		<li>Contact Us</li>
-		<li>About Us</li>
-	</ul>
+	<ul class="nav"> 
+		<li class="nav">
+			<a href="#"> Home </a>
+		</li><li class="nav">
+			<a href="#">Our Vision</a>
+		</li>
+		<li class="nav">
+			<a href="#">Contact us</a>
+		</li>
+		<li class="nav">
+			<a href="#"> About Us </a>
+		</li>
+		</ul>
 	<h1>Best T-shirt EVER!</h1>
 	<h3>We're the bestand we know it</h3>
 	<ul>
